# HermesNexus

./: .dockerignore  .env.development  .env.example  .env.production  .env.production.parallel  .flake8  .gitignore  .pre-commit-config.yaml  ARUBA_VERIFICATION_START_HERE.md  CLAUDE.md  Dockerfile  Dockerfile.edge  Makefile  README.md  VERSION-MANAGEMENT.md  VERSION.json  complete-cloud-api.py  complete-edge-node.py  config.example.yaml  deploy-package.sh  deploy-python-simple.sh  deploy-python-v12.sh  deploy.sh  docker-compose.parallel.yml  docker-compose.yaml  docker-compose.yml  final-edge-node.py  hermes-service.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server-deploy-guide.sh  setup-dev.sh  simple-cloud-api.py  simple-edge-node.py  stable-cloud-api.py  test_phase3_day4.py
.claude/commands/: check.md  plan.md  review.md  (+1 more)
.obsidian/: workspace.json
cloud/: __init__.py
config/: default-matrix.json  failure_handlers.json  rollback_strategies.json
console/: assets.html  audit.html  console.html  index.html  nodes.html  tasks.html
deploy-cloud-api-update/: README.md  update-cloud-api.sh
docs/: 01-总体架构.md  02-云端控制平面.md  03-边缘Hermes节点.md  04-设备适配层.md  05-任务编排与执行模型.md  06-记忆与知识体系.md  07-安全与审计.md  08-可观测性与运维.md  09-MVP开发路线图.md  10-设备协议矩阵.md  11-云边通信与消息模型.md  12-任务DSL与Job模型.md  13-资产模型与数据库设计.md  14-权限模型与审批流.md  15-回滚与故障恢复.md  16-边缘节点部署与运维.md  17-云端API设计.md  18-边缘节点本地目录结构.md  19-Hermes Skills设计规范.md  20-设备驱动插件规范.md  22-事件流与审计日志格式.md  23-失败注入与压测方案.md  24-产品需求说明.md  25-用户角色与使用场景.md  26-控制台信息架构.md  27-告警与工单联动.md  28-站点运营流程.md  29-核心用户故事.md  30-交互流程图文字版.md  31-权限角色矩阵.md  32-控制台页面原型说明.md  33-告警闭环设计.md  34-运维日报与周报设计.md  35-商业价值与落地范围.md  36-代码仓库目录结构.md  37-服务拆分与接口定义.md  39-认证与密钥管理方案.md  40-云边协议细节.md  41-实施里程碑与交付拆分.md  42-边缘节点启动注册流程.md  (+26 more)
edge/: __init__.py  enhanced_edge_node_v12.py  enhanced_edge_node_v2.py  simple_edge_node.py
fix/: EXECUTE_FIX.sh  README.md  START_HERE.md  add_post_heartbeat.py  api_v1_patch.py  edge_fix.py
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_extract.json  .graphify_semantic.json  .graphify_uncached.txt  .semantic_chunk1.txt  .semantic_chunk2.txt  .semantic_chunk3.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
hermesnexus/: __init__.py
local-deploy/: local-demo-start.sh
monitoring/: prometheus-v12.yml
scripts/: DEPLOYMENT_CHECKLIST.md  EMERGENCY_FIX_README.md  FIX_NOW.sh  QUICK_DEPLOY_GUIDE.md  add-api-v1-endpoints.py  aruba_hardware_verification.sh  backup.sh  build.sh  ci-check.sh  deploy-update-package.sh  deploy.sh  dev-server-init.sh  dev-server-start.sh  dev-server-status.sh  dev-server-stop.sh  immediate-fix.sh  init-database.sh  manual-deploy-guide.sh  monitor.py  monitoring-demo.py  monitoring-integration-test.sh  production-fix-now.sh  quick-verify.sh  start-cloud-api.sh  start-edge-node.sh  start_cloud_sqlite.sh  status.sh  stop-services.sh  validate-config.py
shared/: __init__.py
tests/: run_all_tests.py  run_tests.sh  test_audit_replay.py  test_console.py  test_database_functionality.py  test_shared.py  test_simulators.py  week3_test_checklist.md
(+376 files in other folders)
